--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="kahve">#754600</color>
+    <color name="tahta_yesili">#188b56</color>
+    <color name="tahta_kahve">#7f3b00</color>
 </resources>
