-firebase realtime db eklendi, -sonuca göre sonuç aktivitesinde farklı resim çıkıyor, -bazı telefonlarda açıldığında büyük harfle başlaması durumunun oyun temposunu yavaşlatması sıkıntısı giderildi, -kelime tahmin edilince doğruysa yazılan siliniyor, -bilinemeyen kelime sonuç ekranında görünüyor, -doğru olmayan harfler ekranda gösteriliyor, -splash screen, icon eklendi.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="kahve">#754600</color>
     <color name="tahta_yesili">#188b56</color>
+    <color name="tahta_yesili_var">#138550</color>
+    <color name="tahta_kahve_var">#773801</color>
     <color name="tahta_kahve">#7f3b00</color>
+
 </resources>
