--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,53 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    style="@style/Theme.AdamAsmacaOyunu"
+    >
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/kelimeTxt"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="kelime"
+        android:text="kelime getiriliyor"
         android:textSize="25sp"
         android:gravity="center"
-        android:textColor="@color/tahta_kahve"
-
-
         />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        app:hintTextColor="@color/tahta_kahve"
-        app:boxStrokeColor="@color/tahta_kahve"
-        android:textColorHint="@color/tahta_yesili"
-
         >
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/harfTahminTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Harf tahmin et."
-            android:digits="abcçdefgğhıijklmnoöpqrsştuüvwxyz"
+            android:digits="abcçdefgğhıijklmnoöpqrsştuüvwyzABCÇDEFGĞHIİJKLMNOÖPRSŞTUÜVYZ"
             android:inputType="text"
             android:maxLength="1"
             android:textAlignment="center"
-            android:textColor="@color/tahta_kahve"
-
-
-
             />
-
-
-
     </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        app:hintTextColor="@color/tahta_kahve"
-        app:boxStrokeColor="@color/tahta_kahve"
-        android:textColorHint="@color/tahta_yesili"
 
         >
         <com.google.android.material.textfield.TextInputEditText
@@ -60,13 +48,23 @@
             android:layout_height="wrap_content"
             android:hint="Kelimeyi tahmin et."
             android:textAlignment="center"
-            android:textColor="@color/tahta_kahve"
-
-
             />
 
-
     </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/yanlisHarfler"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text=""
+        android:textSize="25sp"
+        android:gravity="center"
+
+        />
+
+
+
 
     <ImageView
         android:id="@+id/adamImg"
