--- a/app/src/main/res/layout/activity_sonuc.xml
+++ b/app/src/main/res/layout/activity_sonuc.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".SonucActivity"
     android:orientation="vertical"
+    style="@style/Theme.AdamAsmacaOyunu"
+
     >
 
 
@@ -31,14 +33,24 @@
         />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/sonucResim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/adam0"
-        android:layout_marginVertical="40dp"
+        android:layout_marginVertical="20dp"
 
         />
-
+    <TextView
+        android:id="@+id/bulunacakKelimeTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Kahramanmaraş"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:textColor="@color/tahta_kahve"
+        android:textStyle="bold"
+        android:layout_margin="10dp"
+        />
     <Button
         android:id="@+id/tektatOynaBtn"
         android:layout_width="match_parent"
