--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,11 +3,11 @@
     <style name="Theme.AdamAsmacaOyunu" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/tahta_yesili</item>
-        <item name="colorPrimaryVariant">@color/tahta_kahve</item>
+        <item name="colorPrimaryVariant">@color/tahta_yesili_var</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/tahta_kahve</item>
-        <item name="colorSecondaryVariant">@color/tahta_kahve</item>
+        <item name="colorSecondaryVariant">@color/tahta_kahve_var</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
