--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="tahta_yesili_var">#138550</color>
     <color name="tahta_kahve_var">#773801</color>
     <color name="tahta_kahve">#7f3b00</color>
+    <color name="koyu_tahta_yesili">#033F23</color>
+
 
 </resources>
