--- a/app/src/main/res/layout/activity_sonuc.xml
+++ b/app/src/main/res/layout/activity_sonuc.xml
@@ -30,6 +30,7 @@
         android:gravity="center"
         android:textColor="@color/tahta_kahve"
         android:textStyle="bold"
+
         />
 
     <ImageView
@@ -38,6 +39,8 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/adam0"
         android:layout_marginVertical="20dp"
+        android:contentDescription="@null"
+
 
         />
     <TextView
