--- a/app/src/main/res/layout/activity_sonuc.xml
+++ b/app/src/main/res/layout/activity_sonuc.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,21 +16,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="80"
-        android:textSize="70sp"
+        android:textSize="@dimen/sonucEkraniPuanTxt"
         android:gravity="center"
         android:textColor="@color/tahta_kahve"
         android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         />
     <TextView
         android:id="@+id/puanDurumuTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Yüksek Puan!"
-        android:textSize="30sp"
+        android:textSize="@dimen/puanDurumuTxt"
         android:gravity="center"
         android:textColor="@color/tahta_kahve"
         android:textStyle="bold"
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/puanTxt"
         />
 
     <ImageView
@@ -41,31 +44,44 @@
         android:layout_marginVertical="20dp"
         android:contentDescription="@null"
 
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/puanDurumuTxt"
         />
     <TextView
         android:id="@+id/bulunacakKelimeTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Kahramanmaraş"
-        android:textSize="30sp"
+        android:textSize="@dimen/puanDurumuTxt"
         android:gravity="center"
         android:textColor="@color/tahta_kahve"
         android:textStyle="bold"
         android:layout_margin="10dp"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sonucResim"
         />
     <Button
         android:id="@+id/tektatOynaBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tekrar oyna" />
+        android:text="Tekrar oyna"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/cikisBtn"
+
+        app:layout_constraintTop_toBottomOf="@id/bulunacakKelimeTxt"
+        />
+
     <Button
         android:id="@+id/cikisBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Çıkış"
-        android:layout_gravity="center"
-        />
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tektatOynaBtn" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
