--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
     <style name="AppTheme.Launcher" parent="Theme.SplashScreen">
 
         <item name="windowSplashScreenBackground">@color/tahta_yesili</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>
         <item name="postSplashScreenTheme">@style/Theme.AdamAsmacaOyunu</item>
 
     </style>
